# earnings-alpha

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backtesting/: performance_metrics.py  portfolio_simulator.py  signal_constructor.py  transaction_costs.py
causal/: __init__.py  diff_in_diff.py  event_study.py  factor_neutralisation.py  instrumental_variables.py  significance_tests.py
configs/: backtest_config.yaml  data_config.yaml  model_config.yaml
dashboard/: app.py
dashboard/pages/: backtest_results.py  causal_estimates.py  model_performance.py  signal_explorer.py
earnings_alpha.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
explainability/: __init__.py  case_studies.py  shap_analysis.py  signal_ranking.py
forecasting/: __init__.py  feature_engineering.py  model_comparison.py  prediction_pipeline.py  tft_model.py  xgboost_model.py
ingestion/: __init__.py  edgar_scraper.py  macro_fetcher.py  price_fetcher.py  reddit_fetcher.py  transcript_parser.py
mlops/: __init__.py  mlflow_tracking.py  model_registry.py  prefect_flows.py
nlp/: __init__.py
nlp/sentiment/: __init__.py  finbert_inference.py  finbert_trainer.py  sentiment_features.py
nlp/topics/: __init__.py  bertopic_model.py  shift_detector.py  (+1 more)
notebooks/: 01_data_exploration.ipynb  02_nlp_feature_analysis.ipynb  03_event_study_results.ipynb  04_causal_identification.ipynb  05_tft_training.ipynb  06_backtest_analysis.ipynb
tests/: test_backtesting.py  test_causal.py  test_ingestion.py  test_nlp_pipeline.py
(+4 files in other folders)
